# my_simple_app

./: .gitignore  pyproject.toml
app/: main.py
helm/simple-app/: Chart.yaml  values.yaml
helm/simple-app/templates/: _helpers.tpl  deployment.yaml  service.yaml
