[tool.poetry]
name = "simple-app"
version = "0.1.0"
description = ""
authors = ["dungpq <dungphanquang@vccorp.vn>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.21.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
